--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Taiane Karine",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "knex": "^2.3.0",
     "nodemon": "^2.0.20",
     "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "zod": "^3.19.1"
   }
 }
