--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "Taiane Karine",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.2",
